--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,36 +1,46 @@
 [project]
 name = "project-mad-nodes"
-description = "Collection of custom ComfyUI nodes for LoRA scheduling and prompt management, featuring visual curve editor and visual prompt gallery with EXIF metadata extraction."
-version = "1.0.0"
-license = {file = "LICENSE"} 
-# classifiers = [
-#     # For OS-independent nodes (works on all operating systems)
-#     "Operating System :: OS Independent",
-#
-#     # OR for OS-specific nodes, specify the supported systems:
-#     "Operating System :: Microsoft :: Windows",  # Windows specific
-#     "Operating System :: POSIX :: Linux",  # Linux specific
-#     "Operating System :: MacOS",  # macOS specific
-#
-#     # GPU Accelerator support. Pick the ones that are supported by your extension.
-#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
-#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
-#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
-#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
-#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
-# ]
+description = "Precise visual control over LoRA strength scheduling via curve editor, plus a drag-and-drop prompt gallery for instant metadata extraction."
+version = "1.1.0"
+license = { file = "LICENSE" }
 
+authors = [
+    { name = "Project MAD" }
+]
+
+keywords = [
+    "comfy",
+    "comfyui",
+    "lora",
+    "schedule",
+    "scheduling",
+    "curve",
+    "curve-editor",
+    "editor",
+    "gallery",
+    "metadata",
+    "prompt",
+    "visual"
+]
+
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Topic :: Multimedia :: Graphics",
+]
+
+dependencies = []
 
 [project.urls]
 Repository = "https://github.com/PROJECTMAD/PROJECT-MAD-NODES"
-#  Used by Comfy Registry https://registry.comfy.org
-Documentation = "https://github.com/PROJECTMAD/PROJECT-MAD-NODES/wiki"
+Documentation = "https://github.com/PROJECTMAD/PROJECT-MAD-NODES/blob/main/docs/GUIDE.md"
 "Bug Tracker" = "https://github.com/PROJECTMAD/PROJECT-MAD-NODES/issues"
+Changelog = "https://github.com/PROJECTMAD/PROJECT-MAD-NODES/blob/main/CHANGELOG.md"
 
 [tool.comfy]
 PublisherId = "projectmad"
 DisplayName = "PROJECT-MAD-NODES"
-Icon = ""
-includes = [] 
-# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility
-
+Icon = "https://raw.githubusercontent.com/PROJECTMAD/PROJECT-MAD-NODES/main/assets/icon.jpg"
